force-app/main/default/objects/RH_TgInteract__c/RH_TgInteract__c.object-meta.xml
<CustomObject>
    <label>Telegram Interaction</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>Interaction Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telegram Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>