force-app/main/default/objects/RH_TgInteract__c/fields/Interactor__c.field-meta.xml
<CustomField>
    <fullName>Interactor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Telegram Interactions</relationshipLabel>
    <relationshipName>Telegram_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>