force-app/main/default/objects/RH_TgInteract__c/fields/RH_ChatId__c.field-meta.xml
<CustomField>
    <fullName>RH_ChatId__c</fullName>
    <label>Chat Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>