force-app/main/default/objects/RH_TgInteract__c/fields/RH_Content__c.field-meta.xml
<CustomField>
    <fullName>RH_Content__c</fullName>
    <label>Content</label>
    <length>130999</length>
    <type>LongTextArea</type>
</CustomField>