force-app/main/default/objects/RH_TgInteract__c/fields/RH_Step__c.field-meta.xml
<CustomField>
    <fullName>RH_Step__c</fullName>
    <defaultValue>&apos;Open&apos;</defaultValue>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>